--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -145,6 +145,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Camera Zoom Out",bShift=False,bCtrl=False,bAlt=True,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="FOV Zoom In",bShift=False,bCtrl=True,bAlt=True,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="FOV Zoom Out",bShift=False,bCtrl=True,bAlt=True,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightShift)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="ToggleSprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=CapsLock)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
